--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Jovan Julian</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
